@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2007, 2021, Oracle and/or its affiliates.
+ * Copyright (c) 2007, 2022, Oracle and/or its affiliates.
  *
  * This program is free software; you can redistribute it and/or modify it under
  * the terms of the GNU General Public License, version 2.0, as published by the
@@ -127,4 +127,6 @@ public interface JdbcStatement extends java.sql.Statement, Query {
     void setAttribute(String name, Object value);
 
     void clearAttributes();
+
+    ResultSetInternalMethods getResultSetInternal();
 }
