@@ -3,6 +3,8 @@
 
 Version 8.0.29
 
+  - Fix for Bug#25701740, STMT EXECUTION FAILS FOR REPLICATION CONNECTION WHEN USECURSORFETCH=TRUE.
+
   - Fix for Bug#33723611, getDefaultTransactionIsolation must return repeatable read.
 
   - Fix for Bug#38954 (11749415), DATA TRUNCATION WHILE USING BIT(1) IN STORED PROCEDURE WITH INOUT TYPE.
